--- a/meditrek/src/index.css
+++ b/meditrek/src/index.css
@@ -11,3 +11,15 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+.spinner{
+
+  height:100vh;
+  display:flex;
+  align-items:center;
+  justify-content: center;
+  z-index:9999;
+  background-color: rgb(255, 255, 255);
+}
+
+
